--- a/requirements.txt
+++ b/requirements.txt
@@ -1,166 +1,21 @@
-absl-py==1.2.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-anyio==3.6.2
-appengine-python-standard==0.3.1
-argilla==1.8.0
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
+annotated-types==0.6.0
+anyio==3.7.1
 attrs==23.1.0
-backoff==2.2.1
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.5
-Brotli==1.0.9
-brotlipy @ file:///Users/runner/miniforge3/conda-bld/brotlipy_1648854303569/work
-cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
-cachetools==5.3.0
 certifi==2023.7.22
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1656783163977/work
-chardet==5.1.0
-charset-normalizer==3.1.0
-click==8.1.3
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1655412516417/work
-commonmark==0.9.1
-conda==22.9.0
-conda-package-handling @ file:///Users/runner/miniforge3/conda-bld/conda-package-handling_1649385138064/work
-contourpy==1.0.7
-cryptography==38.0.1
-cycler==0.11.0
-Deprecated==1.2.14
-distlib==0.3.6
-docutils==0.19
-et-xmlfile==1.1.0
 exceptiongroup==1.1.3
-fastapi==0.88.0
-filelock==3.8.0
-flatbuffers==2.0.7
-fonttools==4.39.3
-frozendict==2.3.7
-frozenlist==1.3.3
-gast==0.4.0
-google-auth==2.17.2
-google-auth-oauthlib==0.4.6
-google-crc32c==1.5.0
-google-pasta==0.2.0
-grpcio @ file:///Users/runner/miniforge3/conda-bld/grpcio_1653138958003/work
-gunicorn==20.1.0
+fastapi==0.104.1
 h11==0.14.0
-h2==4.1.0
-h5py @ file:///Users/runner/miniforge3/conda-bld/h5py_1637964553571/work
-hpack==4.0.0
-httpcore==0.16.3
-httpx==0.23.3
-hyperframe==6.0.1
 idna==3.4
-importlib-metadata==6.3.0
-ipynb==0.5.1
-jaraco.classes==3.2.3
-joblib==1.2.0
-jose==1.0.0
-kaitaistruct==0.10
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-keyring==23.13.1
-kiwisolver==1.4.4
-leveldb-export==0.1.1
-libclang==14.0.6
-lxml==4.9.2
-Markdown==3.4.1
-markdown-it-py==2.2.0
-MarkupSafe==2.1.1
-matplot==0.1.9
-matplotlib==3.7.1
-mdurl==0.1.2
-mock==5.0.1
-monotonic==1.6
-more-itertools==9.1.0
-msg-parser==1.2.0
-multidict==6.0.4
-nltk==3.8.1
-numpy==1.24.2
-oauthlib==3.2.1
-olefile==0.46
-openai==0.27.0
-openpyxl==3.0.10
-opt-einsum==3.3.0
-outcome==1.2.0
-packaging==23.0
-pandas==2.0.0
-pandas-stubs==1.5.2.221213
-pdfminer.six==20221105
-Pillow==9.5.0
-pkginfo==1.9.6
-platformdirs==2.5.4
-protobuf==3.20.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycosat @ file:///Users/runner/miniforge3/conda-bld/pycosat_1649385121707/work
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-pydantic==1.10.8
-Pygments==2.15.0
-pyloco==0.0.139
-pyOpenSSL==22.0.0
-pypandoc==1.11
-pyparsing==3.0.9
-PySocks @ file:///Users/runner/miniforge3/conda-bld/pysocks_1648857351433/work
-python-dateutil==2.8.2
-python-docx==0.8.11
-python-dotenv==0.21.0
-python-magic==0.4.27
-python-pptx==0.6.21
-pytz==2023.3
-readme-renderer==37.3
-regex==2023.6.3
-requests==2.31.0
-requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
-rfc3986==2.0.0
-rich==13.3.3
-rsa==4.9
-ruamel-yaml-conda @ file:///Users/runner/miniforge3/conda-bld/ruamel_yaml_1653464701544/work
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.7
-seaborn==0.12.2
-selenium==4.11.2
-selenium-wire==5.0.0
-SimpleWebSocketServer==0.1.2
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+outcome==1.3.0.post0
+pydantic==2.4.2
+pydantic_core==2.10.1
+PySocks==1.7.1
+selenium==4.14.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
-soupsieve==2.4.1
-starlette==0.22.0
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow-estimator==2.10.0
-tensorflow-macos==2.10.0
-tensorflow-metal==0.6.0
-termcolor==2.0.1
-toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1657485559105/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1649051611147/work
+starlette==0.27.0
 trio==0.22.2
-trio-websocket==0.10.4
-twine==4.0.2
-typer==0.9.0
-types-pytz==2022.6.0.1
-typing==3.7.4.3
-typing_extensions==4.6.3
-tzdata==2023.3
-unstructured==0.7.1
-urllib3==2.0.4
-ushlex==0.99.1
-uvicorn==0.20.0
-virtualenv==20.17.0
-Wand==0.6.11
-webencodings==0.5.1
-websocket-client==1.5.1
-Werkzeug==2.2.2
-wrapt==1.14.1
+trio-websocket==0.11.1
+typing_extensions==4.8.0
+urllib3==2.0.7
 wsproto==1.2.0
-xlrd==2.0.1
-XlsxWriter==3.1.2
-yarl==1.9.2
-zipp==3.15.0
-zstandard==0.18.0
