--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.6.0
 anyio==3.7.1
 attrs==23.1.0
 certifi==2023.7.22
+click==8.1.7
 exceptiongroup==1.1.3
 fastapi==0.104.1
 h11==0.14.0
@@ -18,4 +19,5 @@ trio==0.22.2
 trio-websocket==0.11.1
 typing_extensions==4.8.0
 urllib3==2.0.7
+uvicorn==0.23.2
 wsproto==1.2.0
