--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pydub==0.25.1
 pyparsing==3.1.1
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
