--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,42 @@
 aiofiles==23.2.1
+aiohttp==3.8.6
+aiosignal==1.3.1
 altair==5.1.2
 annotated-types==0.6.0
 anyio==3.7.1
+async-timeout==4.0.3
 attrs==23.1.0
+backoff==2.2.1
+cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.1
 click==8.1.7
+cohere==4.32
 contourpy==1.1.1
 cycler==0.12.1
 exceptiongroup==1.1.3
 fastapi==0.104.1
+fastavro==1.8.2
 ffmpy==0.3.1
 filelock==3.13.1
 fonttools==4.43.1
+frozenlist==1.4.0
 fsspec==2023.10.0
+google-ai-generativelanguage==0.3.3
+google-api-core==2.12.0
+google-auth==2.23.3
+google-generativeai==0.2.2
+googleapis-common-protos==1.61.0
 gradio==3.50.2
 gradio_client==0.6.1
+grpcio==1.59.0
+grpcio-status==1.59.0
 h11==0.14.0
 httpcore==0.18.0
 httpx==0.25.0
 huggingface-hub==0.18.0
 idna==3.4
+importlib-metadata==6.8.0
 importlib-resources==6.1.0
 Jinja2==3.1.2
 jsonschema==4.19.2
@@ -28,12 +44,18 @@ jsonschema-specifications==2023.7.1
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
 matplotlib==3.8.0
+multidict==6.0.4
 numpy==1.26.1
+openai==0.28.1
 orjson==3.9.10
 outcome==1.3.0.post0
 packaging==23.2
 pandas==2.1.2
 Pillow==10.1.0
+proto-plus==1.22.3
+protobuf==4.24.4
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pydantic==2.4.2
 pydantic_core==2.10.1
 pydub==0.25.1
@@ -47,6 +69,7 @@ PyYAML==6.0.1
 referencing==0.30.2
 requests==2.31.0
 rpds-py==0.10.6
+rsa==4.9
 selenium==4.14.0
 semantic-version==2.10.0
 six==1.16.0
@@ -63,3 +86,5 @@ urllib3==2.0.7
 uvicorn==0.23.2
 websockets==11.0.3
 wsproto==1.2.0
+yarl==1.9.2
+zipp==3.17.0
